--- a/ConfigEditor.Wpf/Views/ConfigEditView.xaml
+++ b/ConfigEditor.Wpf/Views/ConfigEditView.xaml
@@ -6,11 +6,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ConfigEditor.Views" d:DataContext="{d:DesignInstance Type=vms:ConfigEditViewModel}"
+             xmlns:local="clr-namespace:ConfigEditor.Views"
+                          d:DataContext="{d:DesignInstance Type=vms:ConfigEditViewModel}"
                           mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Button Content="打开" Command="{Binding LoadConfigCommand}"/>
+    <StackPanel>
         <TextBlock Text="{Binding Path}"/>
-    </Grid>
+        <Button Content="打开" Command="{Binding LoadConfigCommand}"/>
+        <Button Content="创建测试" Command="{Binding CreateTestCommand}"/>
+    </StackPanel>
 </rxui:ReactiveUserControl>
