--- a/src/UI/ConfigEditor.Wpf/Controls/PropertiyView.xaml
+++ b/src/UI/ConfigEditor.Wpf/Controls/PropertiyView.xaml
@@ -36,31 +36,45 @@
         <DataTemplate x:Key="Array" DataType="vms:ConfigViewModel">
             <Border BorderBrush="Gray" BorderThickness="1" Padding="6">
                 <StackPanel >
-                    <Button Content="➕" Command="{Binding AddCommand,ElementName=page}" CommandParameter="{Binding .}" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,-20,0,0"/>
-                    <ItemsControl ItemsSource="{Binding Properties}" AlternationCount="{Binding Properties.Count}">
+                    <StackPanel Orientation="Horizontal">
+                        <ItemsControl ItemsSource="{Binding DimLength}"  AlternationCount="{Binding DimLength.Count}" >
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <WrapPanel Orientation="Horizontal"/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBox Margin="5,0" Text="{Binding  Length}" IsReadOnly="{Binding ReadOnly}" Style="{StaticResource TextBoxExtend.Small}" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="{Binding DisplayName}"/>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                        <Button Content="应用" Command="{Binding SetArrayCommand,ElementName=page}" CommandParameter="{Binding .}" VerticalAlignment="Top" HorizontalAlignment="Right" Style="{StaticResource ButtonPrimary.Small}"/>
+                    </StackPanel>
+
+                    <ItemsControl ItemsSource="{Binding Properties}" >
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <Grid>
-                                    <local:PropertiyView DataContext="{Binding}" AddCommand="{Binding AddCommand,RelativeSource={RelativeSource AncestorType=UserControl,Mode=FindAncestor}}" />
-                                    <Button Content="✖" Command="{Binding RemoveCommand,ElementName=page}"  CommandParameter="{Binding .}" ToolTip="{Binding Path=(ItemsControl.AlternationIndex), 
-                RelativeSource={RelativeSource Mode=TemplatedParent}}" HorizontalAlignment="Right" VerticalAlignment="Top"/>
-                                </Grid>
+                                <local:PropertiyView DataContext="{Binding}" 
+                                                         SetArrayCommand="{Binding SetArrayCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
+                                                         SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}"/>
+                                <!--<Button Content="✖" Command="{Binding RemoveCommand,ElementName=page}"  CommandParameter="{Binding .}" ToolTip="{Binding Path=(ItemsControl.AlternationIndex),                 RelativeSource={RelativeSource Mode=TemplatedParent}}" HorizontalAlignment="Right" VerticalAlignment="Top"/>-->
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
                 </StackPanel>
             </Border>
         </DataTemplate>
-        <DataTemplate x:Key="NullObject" DataType="vms:ConfigViewModel">
-            <Button Content="创建"/>
-        </DataTemplate>
         <DataTemplate x:Key="Object" DataType="vms:ConfigViewModel">
             <Border BorderBrush="Red" BorderThickness="1" Padding="4">
                 <StackPanel>
-                    <ItemsControl ItemsSource="{Binding Properties}">
+                    <Button Visibility="{Binding Value,Converter={StaticResource String2VisibilityReConverter}}" Content="创建" Command="{Binding SetObjectCommand,ElementName=page}" CommandParameter="{Binding .}"/>
+                    <ItemsControl ItemsSource="{Binding Properties}" Visibility="{Binding Value,Converter={StaticResource String2VisibilityConverter}}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <local:PropertiyView DataContext="{Binding}"  AddCommand="{Binding AddCommand,RelativeSource={RelativeSource AncestorType=UserControl,Mode=FindAncestor}}"/>
+                                <local:PropertiyView DataContext="{Binding}" 
+                                                     SetArrayCommand="{Binding SetArrayCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
+                                                     SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}"/>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
@@ -76,7 +90,6 @@
                                            TimeOnlyTemplate="{StaticResource Time}"
                                           DateOnlyTemplate="{StaticResource Date}"
                                           ArrayTemplate="{StaticResource Array}"
-                                          NullObjectTemplate="{StaticResource NullObject}"
                                             ObjectTemplate="{StaticResource Object}">
         </converters:PropertyTypeConverter>
 
