--- a/src/UI/ConfigEditor.Wpf/Views/ConfigEditView.xaml
+++ b/src/UI/ConfigEditor.Wpf/Views/ConfigEditView.xaml
@@ -27,7 +27,7 @@
             <ItemsControl ItemsSource="{Binding Configs}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <c:PropertiyView  AddCommand="{Binding DataContext.AddPropertyCommand,RelativeSource={RelativeSource AncestorType=ItemsControl, Mode=FindAncestor}}"></c:PropertiyView>
+                        <c:PropertiyView   SetArrayCommand="{Binding DataContext.SetArrayCommand,RelativeSource={RelativeSource AncestorType=ItemsControl, Mode=FindAncestor}}" SetObjectCommand="{Binding DataContext.SetObjectCommand,RelativeSource={RelativeSource AncestorType=ItemsControl, Mode=FindAncestor}}"></c:PropertiyView>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
