--- a/src/UI/ConfigEditor.Wpf/Controls/PropertiyView.xaml
+++ b/src/UI/ConfigEditor.Wpf/Controls/PropertiyView.xaml
@@ -41,7 +41,7 @@
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </StackPanel>
-            
+
         </DataTemplate>
         <DataTemplate x:Key="Bool">
             <StackPanel>
@@ -108,39 +108,46 @@
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="Array" DataType="vms:ConfigViewModel">
-            <Border BorderBrush="Gray" BorderThickness="1" Padding="6" ToolTip="{Binding DisplayName}">
-                <StackPanel >
-                    <StackPanel Orientation="Horizontal">
-                        <ItemsControl ItemsSource="{Binding DimLength}"  AlternationCount="{Binding DimLength.Count}" >
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <WrapPanel Orientation="Horizontal"/>
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
+            <StackPanel>
+                <TextBlock Text="{Binding DisplayName}" ToolTip="{Binding Description}" VerticalAlignment="Center"/>
+
+                <Border BorderBrush="Gray" BorderThickness="1" Padding="6" ToolTip="{Binding DisplayName}">
+                    <StackPanel >
+                        <StackPanel Orientation="Horizontal">
+                            <ItemsControl ItemsSource="{Binding DimLength}"  AlternationCount="{Binding DimLength.Count}" >
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel Orientation="Horizontal"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBox Margin="5,0" Text="{Binding  Length}" IsReadOnly="{Binding ReadOnly}" Style="{StaticResource TextBoxExtend.Small}" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="{Binding DisplayName}"/>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                            <Button Content="应用" Command="{Binding SetArrayCommand,ElementName=page}" CommandParameter="{Binding .}" VerticalAlignment="Top" HorizontalAlignment="Right" Style="{StaticResource ButtonPrimary.Small}"/>
+                        </StackPanel>
+
+                        <ItemsControl ItemsSource="{Binding Properties}" >
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <TextBox Margin="5,0" Text="{Binding  Length}" IsReadOnly="{Binding ReadOnly}" Style="{StaticResource TextBoxExtend.Small}" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="{Binding DisplayName}"/>
+                                    <local:PropertiyView DataContext="{Binding}" 
+                                                         SetArrayCommand="{Binding SetArrayCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
+                                                         SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}"/>
+                                    <!--<Button Content="✖" Command="{Binding RemoveCommand,ElementName=page}"  CommandParameter="{Binding .}" ToolTip="{Binding Path=(ItemsControl.AlternationIndex),                 RelativeSource={RelativeSource Mode=TemplatedParent}}" HorizontalAlignment="Right" VerticalAlignment="Top"/>-->
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
-                        <Button Content="应用" Command="{Binding SetArrayCommand,ElementName=page}" CommandParameter="{Binding .}" VerticalAlignment="Top" HorizontalAlignment="Right" Style="{StaticResource ButtonPrimary.Small}"/>
                     </StackPanel>
-
-                    <ItemsControl ItemsSource="{Binding Properties}" >
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <local:PropertiyView DataContext="{Binding}" 
-                                                         SetArrayCommand="{Binding SetArrayCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}" 
-                                                         SetObjectCommand="{Binding SetObjectCommand,RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}}"/>
-                                <!--<Button Content="✖" Command="{Binding RemoveCommand,ElementName=page}"  CommandParameter="{Binding .}" ToolTip="{Binding Path=(ItemsControl.AlternationIndex),                 RelativeSource={RelativeSource Mode=TemplatedParent}}" HorizontalAlignment="Right" VerticalAlignment="Top"/>-->
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </StackPanel>
-            </Border>
+                </Border>
+            </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="Object" DataType="vms:ConfigViewModel">
-            <Border BorderBrush="Gray" BorderThickness="1" Padding="4">
+            <StackPanel>
+                <TextBlock Text="{Binding DisplayName}" ToolTip="{Binding Description}" VerticalAlignment="Center"/>
+
+                <Border BorderBrush="Gray" BorderThickness="1" Padding="4">
                 <StackPanel>
                     <Button Visibility="{Binding Value,Converter={StaticResource String2VisibilityReConverter}}" Content="创建" Command="{Binding SetObjectCommand,ElementName=page}" CommandParameter="{Binding .}"/>
                     <ItemsControl ItemsSource="{Binding Properties}" Visibility="{Binding Value,Converter={StaticResource String2VisibilityConverter}}">
@@ -154,6 +161,7 @@
                     </ItemsControl>
                 </StackPanel>
             </Border>
+            </StackPanel>
         </DataTemplate>
         <converters:PropertyTypeConverter x:Key="propertyTypeConverter"
                                            BooleanTemplate="{StaticResource Bool}"
